# qannotate

./: .gitignore  README.md  build.sh  logo.idml  qannotate.ini
common/: AvlTable.h  CMakeLists.txt  base32.c  base32.h  endian_portable.h  printer.hpp  qException.h  qHexdump.h  qRoman.h  qUtfIndexer.h  qXml.h
qannotate/: CMakeLists.txt  appicon.rc  rebuild_branch  resources.qrc
qannotate/src/: centralwidget.cpp  centralwidget.h  centralwidget.ui  converter.cpp  converter.h  converter.ui  editform.cpp  editform.h  editwidgets.cpp  editwidgets.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  searchform.cpp  searchform.h  searchform.ui  settings.cpp  settings.h  treedata.cpp  treedata.h  types.h  util.cpp  util.h
qannotate/util/: convert_ico.sh
qtfe/: CMakeLists.txt  qtfe.h
qtfe/spec/: constraints.txt  frontend-1.0.h  spec-1.0.cpp  spec-1.0.h  spec-1.0.xml  spec-global.h
qtfe/src/: editor.cpp  editor.h  frontend-dir.cpp  frontend.cpp  frontend.h  key.cpp  key.h  spec.cpp  spec.h  text.cpp  text.h  types.h  xml.cpp  xml.h  xmlold.hpp
util/globalgen/: .gitignore  CMakeLists.txt
util/globalgen/src/: main.cpp
util/specgen/: CMakeLists.txt
util/specgen/src/: generator.hpp  loader.hpp  main.cpp  model.hpp
